@@ -1,3 +1,8 @@
+2006-05-15  lav
+
+	* history.cc, history.h: add clone ctor - this fixes a coredump
+	  in History::Push.
+
 2006-04-24  lav
 
 	* history.cc: null-terminate read history lines.
